--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
 		}
 	</script>
 
-    <script src="Script-4.js"></script>
+    <script src="Script.js"></script>
     
     <style>
         body {
@@ -106,12 +106,12 @@
         <hr>
         <button onclick="updateScene()">Apply</button>
         <hr>
-        Γωνία περιστροφής:<input type="text" id="stepAngleTxt" value="1" autocomplete="off"> 
-        Υψος:<input type="text" id="stepZTxt" value="0.01" autocomplete="off">
+        Angle Step: <input type="text" id="stepAngleTxt" value="1" autocomplete="off"> 
+        Height: <input type="text" id="stepZTxt" value="0.01" autocomplete="off">
         <button onclick="StartAnimation()">Start</button>
         <button onclick="StopAnimation()">Stop</button>
         <hr>
-        Θέση ποντικιού x:<span id="mouseX">759</span>, y:<span id="mouseY">573</span>
+        Mouse location x:<span id="mouseX">759</span>, y:<span id="mouseY">573</span>
         <hr>
         <label>Select Part to Rotate:</label>
         <div class="radio-option"><input type="radio" name="LimbPart" value="rightArm" checked><label>Right Arm</label></div>
