--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Γραφικά Υπολογιστών
+        Robot
     </title>
     <script src="Lib/gl-matrix-min.js"></script>
     <script src="Lib/webgl-debug.js"></script>
