--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,8 @@
     <title>
         Robot
     </title>
-    <script src="Lib/gl-matrix-min.js"></script>
-    <script src="Lib/webgl-debug.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/gl-matrix@3.3.0/gl-matrix-min.js"></script>
+    <script src="https://github.com/KhronosGroup/WebGLDeveloperTools/blob/main/src/debug/webgl-debug.js"></script>
     <script id="vShader" type="x-shader/x-vertex">
 		attribute vec4 aVertexPosition;
 		attribute vec4 aVertexColor;
